--- a/book/book.tex
+++ b/book/book.tex
@@ -891,14 +891,14 @@ y ejecutar código.
 
 \section{El primer programa}
 \label{hello}
-\index{Hello, World}
+\index{Hola, mundo}
 
 Tradicionalmente, el primer programa que escribes en un nuevo lenguaje
-de programación se llama ``Hello, World!'' porque todo lo que hace es mostrar
-las palabras ``Hello, World!''.  En Python, se ve así:
+de programación se llama ``¡Hola, mundo!'' porque todo lo que hace es mostrar
+las palabras ``¡Hola, mundo!''.  En Python, se ve así:
 
 \begin{verbatim}
->>> print('Hello, World!')
+>>> print('¡Hola, mundo!')
 \end{verbatim}
 %
 Este es un ejemplo de una {\bf sentencia print}, aunque
@@ -906,7 +906,7 @@ en realidad no imprime nada en papel.  Ésta muestra un resultado en la
 pantalla.  En este caso, el resultado es la frase
 
 \begin{verbatim}
-Hello, World!
+¡Hola, mundo!
 \end{verbatim}
 %
 Las comillas en el programa marcan el principio y el final
@@ -924,7 +924,7 @@ una función, así que no usa paréntesis.
 \index{Python 2}
 
 \begin{verbatim}
->>> print 'Hello, World!'
+>>> print '¡Hola, mundo!'
 \end{verbatim}
 %
 Esta distinción tendrá más sentido pronto, pero eso es suficiente para
@@ -935,7 +935,7 @@ comenzar.
 \index{aritmético!operador}
 \index{operador aritmético}
 
-Después de ``Hello, World'', el siguiente paso es la aritmética.  Python
+Después de ``Hola, mundo'', el siguiente paso es la aritmética.  Python
 proporciona {\bf operadores}, los cuales son símbolos especiales que
 representan computaciones como la suma y la multiplicación.
 
@@ -992,7 +992,7 @@ operadores bit a bit en este libro, pero puedes leer sobre
 
 Un {\bf valor} es una de las cosas básicas con las que funciona un programa,
 como una letra o un número.  Algunos valores que hemos visto hasta ahora son
-{\tt 2}, {\tt 42.0} y \verb"'Hello, World!'".
+{\tt 2}, {\tt 42.0} y \verb"'¡Hola, mundo!'".
 
 Estos valores pertenecen a diferentes {\bf tipos}: {\tt 2} es un {\bf entero}
 (en inglés, {\em integer}), {\tt 42.0} es un {\bf número de coma flotante} (en
@@ -1009,7 +1009,7 @@ puede decir:
 <class 'int'>
 >>> type(42.0)
 <class 'float'>
->>> type('Hello, World!')
+>>> type('¡Hola, mundo!')
 <class 'str'>
 \end{verbatim}
 %
@@ -1397,13 +1397,13 @@ Una {\bf sentencia de asignación} crea una nueva variable y le da
 un valor:
 
 \begin{verbatim}
->>> message = 'And now for something completely different'
+>>> mensaje = 'Y ahora algo completamente diferente'
 >>> n = 17
 >>> pi = 3.1415926535897932
 \end{verbatim}
 %
 Este ejemplo hace tres asignaciones.  La primera asigna una cadena
-a una nueva variable llamada {\tt message};
+a una nueva variable llamada {\tt mensaje};
 la segunda pone al entero {\tt 17} en {\tt n}; la tercera
 asigna el valor (aproximado) de $\pi$ a {\tt pi}.
 \index{diagrama de estado}
@@ -1437,22 +1437,22 @@ usar sólo minúsculas para los nombres de variables.
 
 El guión bajo, \verb"_", puede aparecer en un nombre.
 A menudo se usa en nombres con varias palabras, tales como
-\verb"your_name" o \verb"airspeed_of_unladen_swallow".
+\verb"tu_nombre" o \verb"velocidad_de_golondrina_sin_carga".
 \index{guión bajo}
 
 Si le das un nombre ilegal a una variable, obtendrás un error de sintaxis:
 
 \begin{verbatim}
->>> 76trombones = 'big parade'
+>>> 76trombones = 'gran desfile'
 SyntaxError: invalid syntax
->>> more@ = 1000000
+>>> mas@ = 1000000
 SyntaxError: invalid syntax
->>> class = 'Advanced Theoretical Zymurgy'
+>>> class = 'Cimología teórica avanzada'
 SyntaxError: invalid syntax
 \end{verbatim}
 %
 {\tt 76trombones} es ilegal porque comienza con un número.
-{\tt more@} es ilegal porque contiene un carácter ilegal, {\tt
+{\tt mas@} es ilegal porque contiene un carácter ilegal, {\tt
 @}.  Sin embargo, ¿qué tiene de malo {\tt class}?
 
 Resulta que {\tt class} es una de las {\bf palabras clave} de Python.  El
@@ -1549,12 +1549,12 @@ y el modo script que pueden confundir.
 Por ejemplo, si usas Python como una calculadora, puedes escribir
 
 \begin{verbatim}
->>> miles = 26.2
->>> miles * 1.61
+>>> millas = 26.2
+>>> millas * 1.61
 42.182
 \end{verbatim}
 
-La primera línea asigna un valor a {\tt miles}, pero no tiene un efecto
+La primera línea asigna un valor a {\tt millas}, pero no tiene un efecto
 visible.  La segunda línea es una expresión, por lo cual el
 intérprete la evalúa y muestra el resultado.  Resulta que una
 maratón es de unos 42 kilómetros.
@@ -1567,8 +1567,8 @@ muestra el resultado.
 Para mostrar el resultado, necesitas una sentencia {\tt print} como esta:
 
 \begin{verbatim}
-miles = 26.2
-print(miles * 1.61)
+millas = 26.2
+print(millas * 1.61)
 \end{verbatim}
 
 Este comportamiento puede confundir al principio.
@@ -1604,7 +1604,7 @@ y {\tt (1+1)**(5-2)} es 8. También puedes usar paréntesis para hacer una
 expresión más fácil de leer, como en {\tt (minute * 100) / 60}, incluso
 si no cambia el resultado.
 
-\item Los {\bf E}xponentes (potencias) tienen la siguiente proridad, así que
+\item Los {\bf E}xponentes de potencias tienen la siguiente proridad, así que
 {\tt 1 + 2**3} es 9, no 27, y {\tt 2 * 3**2} es 18, no 36.
 
 \item La {\bf M}ultiplicación y la {\bf D}ivisión tienen mayor prioridad
@@ -1632,7 +1632,7 @@ En general, no puedes realizar operaciones matemáticas con cadenas, incluso
 si las cadenas parecen números, por lo que las siguientes son ilegales:
 
 \begin{verbatim}
-'chinese'-'food'    'eggs'/'easy'    'third'*'a charm'
+'comida'-'china'    'huevos'/'fácil'    'tercero'*'un encanto'
 \end{verbatim}
 %
 Pero hay dos excepciones, {\tt +} y {\tt *}.
@@ -1642,9 +1642,9 @@ une las cadenas enlazándolas de extremo a extremo.  Por ejemplo:
 \index{concatenación}
 
 \begin{verbatim}
->>> first = 'throat'
->>> second = 'warbler'
->>> first + second
+>>> primero = 'throat'
+>>> segundo = 'warbler'
+>>> primero + segundo
 throatwarbler
 \end{verbatim}
 %
@@ -1660,7 +1660,7 @@ manera significativa en la que la concatenación y la repetición son
 diferentes de la suma y multiplicación de enteros.
 ¿Puedes pensar en una propiedad que tiene la suma
 que la concatenación no?
-\index{commutativity}
+\index{conmutatividad}
 
 
 \section{Comentarios}
@@ -1675,15 +1675,15 @@ en lenguaje natural lo que el programa hace.  Estas notas se llaman
 {\bf comentarios}, y comienzan con el símbolo \verb"#":
 
 \begin{verbatim}
-# compute the percentage of the hour that has elapsed
-percentage = (minute * 100) / 60
+# calcular el porcentaje de la hora que ha transcurrido
+porcentaje = (minuto * 100) / 60
 \end{verbatim}
 %
 En este caso, el comentario aparece en una línea por sí sola.  Puedes también poner
 comentarios al final de una línea:
 
 \begin{verbatim}
-percentage = (minute * 100) / 60     # percentage of an hour
+porcentaje = (minuto * 100) / 60     # porcentaje de una hora
 \end{verbatim}
 %
 Todo desde el {\tt \#} hasta el final de la línea es ignorado---no
@@ -1696,13 +1696,13 @@ código.  Es razonable asumir que el lector puede descifrar
 Este comentario es redundante con el código e inútil:
 
 \begin{verbatim}
-v = 5     # assign 5 to v
+v = 5     # asigna 5 a v
 \end{verbatim}
 %
 Este comentario contiene información útil que no está en el código:
 
 \begin{verbatim}
-v = 5     # velocity in meters/second.
+v = 5     # velocidad en metros/segundos.
 \end{verbatim}
 %
 Los buenos nombres de variable pueden reducir la necesidad de comentarios, pero
@@ -1712,7 +1712,7 @@ así que hay una compensación.
 
 \section{Depuración}
 \index{depuración}
-\index{bug}
+\index{bug}\index{error}
 
 Tres tipos de errores pueden ocurrir en un programa: errores de sintaxis, errores
 de tiempo de ejecución y errores semánticos.  Es útil
@@ -1928,8 +1928,8 @@ lo convierte en un entero, si puede, o de lo contrario reclama:
 \begin{verbatim}
 >>> int('32')
 32
->>> int('Hello')
-ValueError: invalid literal for int(): Hello
+>>> int('Hola')
+ValueError: invalid literal for int(): Hola
 \end{verbatim}
 %
 {\tt int} puede convertir valores de coma flotante en enteros, pero
@@ -1998,16 +1998,16 @@ Este formato se llama {\bf notación de punto}.
 \index{notación de punto}
 
 \begin{verbatim}
->>> ratio = signal_power / noise_power
->>> decibels = 10 * math.log10(ratio)
+>>> razon = potencia_senal / potencia_ruido
+>>> decibeles = 10 * math.log10(razon)
 
->>> radians = 0.7
->>> height = math.sin(radians)
+>>> radianes = 0.7
+>>> altura = math.sin(radians)
 \end{verbatim}
 %
 El primer ejemplo usa \verb"math.log10" para calcular
-una relación señal-ruido en decibeles (suponiendo que \verb"signal_power" y
-\verb"noise_power" están definidas).  El módulo math también proporciona {\tt log},
+una relación señal-ruido en decibeles (suponiendo que \verb"potencia_senal" y
+\verb"potencia_ruido" están definidas).  El módulo math también proporciona {\tt log},
 el cual calcula logaritmos en base {\tt e}.
 \index{función log}
 \index{log!función}
@@ -2016,15 +2016,15 @@ el cual calcula logaritmos en base {\tt e}.
 \index{función trigonométrica}
 \index{trigonométrica!función}
 
-El segundo ejemplo encuentra el seno de {\tt radians}.  El nombre de la variable {\tt radians} es un indicio de que {\tt sin} y las otras funciones
+El segundo ejemplo encuentra el seno de {\tt radianes}.  El nombre de la variable {\tt radianes} es un indicio de que {\tt sin} y las otras funciones
 trigonométricas ({\tt cos}, {\tt tan}, etc.)  toman argumentos en radianes. Para
 convertir de grados a radianes, divide por 180 y multiplica por
 $\pi$:
 
 \begin{verbatim}
->>> degrees = 45
->>> radians = degrees / 180.0 * math.pi
->>> math.sin(radians)
+>>> grados = 45
+>>> radianes = grados / 180.0 * math.pi
+>>> math.sin(radianes)
 0.707106781187
 \end{verbatim}
 %
@@ -2058,7 +2058,7 @@ ejemplo, el argumento de una función puede ser cualquier tipo de expresión,
 incluyendo operadores aritméticos:
 
 \begin{verbatim}
-x = math.sin(degrees / 360.0 * 2 * math.pi)
+x = math.sin(grados / 360.0 * 2 * math.pi)
 \end{verbatim}
 %
 E incluso llamadas a funciones:
@@ -2074,8 +2074,8 @@ izquierdo es un error de sintaxis (veremos excepciones a esta regla
 más tarde).
 
 \begin{verbatim}
->>> minutes = hours * 60                 # right
->>> hours * 60 = minutes                 # wrong!
+>>> minutos = horas * 60                 # correcto
+>>> horas * 60 = minutos                 # ¡incorrecto!
 SyntaxError: can't assign to operator
 \end{verbatim}
 %
@@ -2096,13 +2096,13 @@ la secuencia de sentencias que se ejecutan cuando la función es llamada.
 Aquí hay un ejemplo:
 
 \begin{verbatim}
-def print_lyrics():
-    print("I'm a lumberjack, and I'm okay.")
-    print("I sleep all night and I work all day.")
+def imprimir_letra():
+    print("Soy un leñador y estoy bien.")
+    print("Duermo toda la noche y trabajo todo el día.")
 \end{verbatim}
 %
 {\tt def} es una palabra clave que indica que esta es una definición
-de función. El nombre de la función es \verb"print_lyrics".  Las
+de función. El nombre de la función es \verb"imprimir_letra".  Las
 reglas para los nombres de funciones son las mismas que para los nombres de variables: las letras,
 los números y el guión bajo son legales, pero el primer caracter
 no puede ser un número.  No puedes usar una palabra clave como nombre de una función,
@@ -2142,9 +2142,9 @@ no está completa:
 \index{ellipses}
 
 \begin{verbatim}
->>> def print_lyrics():
-...     print("I'm a lumberjack, and I'm okay.")
-...     print("I sleep all night and I work all day.")
+>>> def imprimir_letra():
+...     print("Soy un leñador y estoy bien.")
+...     print("Duermo toda la noche y trabajo todo el día.")
 ...
 \end{verbatim}
 %
@@ -2156,9 +2156,9 @@ tipo \verb"function":
 \index{function!tipo}
 
 \begin{verbatim}
->>> print(print_lyrics)
-<function print_lyrics at 0xb7e99e9c>
->>> type(print_lyrics)
+>>> print(imprimir_letra)
+<function imprimir_letra at 0xb7e99e9c>
+>>> type(imprimir_letra)
 <class 'function'>
 \end{verbatim}
 %
@@ -2166,29 +2166,29 @@ La sintaxis para llamar a la nueva función es la misma que
 para las funciones incorporadas:
 
 \begin{verbatim}
->>> print_lyrics()
-I'm a lumberjack, and I'm okay.
-I sleep all night and I work all day.
+>>> imprimir_letra()
+Soy un leñador y estoy bien.
+Duermo toda la noche y trabajo todo el día.
 \end{verbatim}
 %
 Una vez que hayas definido una función, puedes usarla dentro de otra
 función.  Por ejemplo, para repetir el estribillo anterior, podríamos escribir
-una función llamada \verb"repeat_lyrics":
+una función llamada \verb"repetir_letra":
 
 \begin{verbatim}
-def repeat_lyrics():
-    print_lyrics()
-    print_lyrics()
+def repetir_letra():
+    imprimir_letra()
+    imprimir_letra()
 \end{verbatim}
 %
-Y luego llamar a \verb"repeat_lyrics":
+Y luego llamar a \verb"repetir_letra":
 
 \begin{verbatim}
 >>> repeat_lyrics()
-I'm a lumberjack, and I'm okay.
-I sleep all night and I work all day.
-I'm a lumberjack, and I'm okay.
-I sleep all night and I work all day.
+Soy un leñador y estoy bien.
+Duermo toda la noche y trabajo todo el día.
+Soy un leñador y estoy bien.
+Duermo toda la noche y trabajo todo el día.
 \end{verbatim}
 %
 Pero así no es realmente como sigue la canción.
@@ -2201,19 +2201,19 @@ Reuniendo los fragmentos de código de la sección anterior, el
 programa completo se ve así:
 
 \begin{verbatim}
-def print_lyrics():
-    print("I'm a lumberjack, and I'm okay.")
-    print("I sleep all night and I work all day.")
+def imprimir_letra():
+    print("Soy un leñador y estoy bien.")
+    print("Duermo toda la noche y trabajo todo el día.")
 
-def repeat_lyrics():
-    print_lyrics()
-    print_lyrics()
+def repetir_letra():
+    imprimir_letra()
+    imprimir_letra()
 
-repeat_lyrics()
+repetir_letra()
 \end{verbatim}
 %
-Este programa contiene dos definiciones de función: \verb"print_lyrics" y
-\verb"repeat_lyrics".  Las definiciones de funciones se ejecutan al igual que otras
+Este programa contiene dos definiciones de función: \verb"imprimir_letra" y
+\verb"repetir_letra".  Las definiciones de funciones se ejecutan al igual que otras
 sentencias, pero el efecto es crear objetos de función.  Las sentencias
 dentro de la función no se ejecutan hasta que la función es llamada, y
 la definición de función no genera salida.
@@ -2229,8 +2229,8 @@ el programa y mira qué mensaje
 de error obtienes.
 
 Ahora regresa la llamada de función al final
-y mueve la definición de \verb"print_lyrics" a después de la definición de
-\verb"repeat_lyrics".  ¿Qué ocurre cuando ejecutas este programa?
+y mueve la definición de \verb"imprimir_letra" a después de la definición de
+\verb"repetir_letra".  ¿Qué ocurre cuando ejecutas este programa?
 
 
 \section{Flujo de ejecución}
@@ -2286,7 +2286,7 @@ una función que toma un argumento:
 \index{paréntesis!parámetros en}
 
 \begin{verbatim}
-def print_twice(bruce):
+def impr_2veces(bruce):
     print(bruce)
     print(bruce)
 \end{verbatim}
@@ -2298,29 +2298,29 @@ parámetro (sea lo que sea) dos veces.
 Esta función puede usarse con cualquier valor que se pueda imprimir.
 
 \begin{verbatim}
->>> print_twice('Spam')
+>>> impr_2veces('Spam')
 Spam
 Spam
->>> print_twice(42)
+>>> impr_2veces(42)
 42
 42
->>> print_twice(math.pi)
+>>> impr_2veces(math.pi)
 3.14159265359
 3.14159265359
 \end{verbatim}
 %
 Las mismas reglas de composición que se aplican a las funciones incorporadas también
 se aplican a las funciones definidas por el programador, así que podemos usar cualquier tipo de expresión
-como un argumento para \verb"print_twice":
+como un argumento para \verb"impr_2veces":
 \index{composición}
 \index{función definida por el programador}
 \index{programador!función definida por el}
 
 \begin{verbatim}
->>> print_twice('Spam '*4)
+>>> impr_2veces('Spam '*4)
 Spam Spam Spam Spam
 Spam Spam Spam Spam
->>> print_twice(math.cos(math.pi))
+>>> impr_2veces(math.cos(math.pi))
 -1.0
 -1.0
 \end{verbatim}
@@ -2334,7 +2334,7 @@ También puedes usar una variable como un argumento:
 
 \begin{verbatim}
 >>> michael = 'Eric, the half a bee.'
->>> print_twice(michael)
+>>> impr_2veces(michael)
 Eric, the half a bee.
 Eric, the half a bee.
 \end{verbatim}
@@ -2342,7 +2342,7 @@ Eric, the half a bee.
 El nombre de la variable que pasamos como argumento ({\tt michael}) no tiene
 nada que ver con el nombre del parámetro ({\tt bruce}).  No
 importa cómo se le llame al valor en su casa (en la función que llama);
-aquí en \verb"print_twice", a todos les llamamos {\tt bruce}.
+aquí en \verb"impr_2veces", a todos les llamamos {\tt bruce}.
 
 
 \section{Las variables y los parámetros son locales}
@@ -2355,9 +2355,9 @@ solamente dentro de la función.  Por ejemplo:
 \index{paréntesis!parámetros en}
 
 \begin{verbatim}
-def cat_twice(part1, part2):
-    cat = part1 + part2
-    print_twice(cat)
+def cat_2veces(parte1, parte2):
+    cat = parte1 + parte2
+    impr_2veces(cat)
 \end{verbatim}
 %
 Esta función toma dos argumentos, los concatena e imprime
@@ -2365,14 +2365,14 @@ el resultado dos veces.  Aquí hay un ejemplo que la usa:
 \index{concatenation}
 
 \begin{verbatim}
->>> line1 = 'Bing tiddle '
->>> line2 = 'tiddle bang.'
->>> cat_twice(line1, line2)
+>>> linea1 = 'Bing tiddle '
+>>> linea2 = 'tiddle bang.'
+>>> cat_2veces(linea1, linea2)
 Bing tiddle tiddle bang.
 Bing tiddle tiddle bang.
 \end{verbatim}
 %
-Cuando \verb"cat_twice" termina, la variable {\tt cat}
+Cuando \verb"cat_2veces" termina, la variable {\tt cat}
 se destruye.  Si intentamos imprimirla, obtenemos una excepción:
 \index{NameError}
 \index{excepción NameError}
@@ -2383,7 +2383,7 @@ NameError: name 'cat' is not defined
 \end{verbatim}
 %
 Los parámetros también son locales.
-Por ejemplo, afuera de \verb"print_twice", no hay
+Por ejemplo, afuera de \verb"impr_2veces", no hay
 tal cosa como {\tt bruce}.
 \index{parámetro}
 
@@ -2415,8 +2415,8 @@ muestra en la Figura~\ref{fig.stack}.
 
 
 Los marcos se organizan en una pila que indica cuál función
-llama a cuál, y así.  En este ejemplo, \verb"print_twice"
-fue llamado por \verb"cat_twice", y \verb"cat_twice" fue llamado por
+llama a cuál, y así.  En este ejemplo, \verb"impr_2veces"
+fue llamado por \verb"cat_2veces", y \verb"cat_2veces" fue llamado por
 \verb"__main__", el cual es un nombre especial para el marco más alto.  Cuando
 creas una variable afuera de todas las funciones, ésta pertenece a
 \verb"__main__".
@@ -2424,8 +2424,8 @@ creas una variable afuera de todas las funciones, ésta pertenece a
 \index{main}
 
 Cada parámetro hace referencia al mismo valor que su argumento
-correspondiente.  Así que, {\tt part1} tiene el mismo valor que
-{\tt line1}, {\tt part2} tiene el mismo valor que {\tt line2}
+correspondiente.  Así que, {\tt parte1} tiene el mismo valor que
+{\tt linea1}, {\tt parte2} tiene el mismo valor que {\tt linea2}
 y {\tt bruce} tiene el mismo valor que {\tt cat}.
 
 Si ocurre un error durante una llamada de función, Python imprime el
@@ -2434,15 +2434,15 @@ y el nombre de la función que llamó a {\em esa}, todo el
 camino de vuelta a \verb"__main__".
 
 Por ejemplo, si intentas acceder a {\tt cat} desde adentro de
-\verb"print_twice", obtienes un {\tt NameError}:
+\verb"impr_2veces", obtienes un {\tt NameError}:
 
 \begin{verbatim}
 Traceback (innermost last):
   File "test.py", line 13, in __main__
-    cat_twice(line1, line2)
-  File "test.py", line 5, in cat_twice
-    print_twice(cat)
-  File "test.py", line 9, in print_twice
+    cat_2veces(linea1, linea2)
+  File "test.py", line 5, in cat_2veces
+    impr_2veces(cat)
+  File "test.py", line 9, in impr_2veces
     print(cat)
 NameError: name 'cat' is not defined
 \end{verbatim}
@@ -2466,7 +2466,7 @@ ejecutando actualmente está al final.
 
 Algunas de las funciones que hemos usado, tales como las funciones matemáticas, devuelven
 resultados; por falta de un mejor nombre, las llamo {\bf funciones
-  fructíferas}.  Otras funciones, como \verb"print_twice", realizan una
+  fructíferas}.  Otras funciones, como \verb"impr_2veces", realizan una
 acción pero no devuelven un valor.  Son llamadas {\bf funciones
   nulas}.
 
@@ -2475,8 +2475,8 @@ quieres hacer algo con el resultado; por ejemplo, podrías
 asignarlo a una variable o usarlo como parte de una expresión:
 
 \begin{verbatim}
-x = math.cos(radians)
-golden = (math.sqrt(5) + 1) / 2
+x = math.cos(radianes)
+dorado = (math.sqrt(5) + 1) / 2
 \end{verbatim}
 %
 Cuando llamas a una función en modo interactivo, Python muestra
@@ -2507,10 +2507,10 @@ asignas el resultado a una variable, obtienes un valor especial llamado
 \index{None!valor especial}
 
 \begin{verbatim}
->>> result = print_twice('Bing')
+>>> resultado = impr_2veces('Bing')
 Bing
 Bing
->>> print(result)
+>>> print(resultado)
 None
 \end{verbatim}
 %
@@ -2695,13 +2695,13 @@ impresas cuando ocurre una excepción.
 \index{función len}
 \index{len!función}
 
-Escribe una función con nombre \verb"right_justify" que tome una cadena
+Escribe una función con nombre \verb"justificar_derecha" que tome una cadena
 con nombre {\tt s} como parámetro e imprima la cadena con suficientes
 espacios al inicio de tal manera que la última letra de la cadena esté en la columna 70
 de la pantalla.
 
 \begin{verbatim}
->>> right_justify('monty')
+>>> justificar_derecha('monty')
                                                                  monty
 \end{verbatim}
 
@@ -2717,41 +2717,41 @@ devuelve la longitud de una cadena, por lo que el valor de \verb"len('monty')" e
 \index{función!objeto de}
 
 Un objeto de función es un valor que puedes asignar a una variable o
-pasarlo como argumento.  Por ejemplo, \verb"do_twice" es una función
+pasarlo como argumento.  Por ejemplo, \verb"hacer_2veces" es una función
 que toma un objeto de función como argumento y lo llama dos veces:
 
 \begin{verbatim}
-def do_twice(f):
+def hacer_2veces(f):
     f()
     f()
 \end{verbatim}
 
-Aquí hay un ejemplo que usa \verb"do_twice" para llamar a una función
-con nombre \verb"print_spam" dos veces.
+Aquí hay un ejemplo que usa \verb"hacer_2veces" para llamar a una función
+con nombre \verb"imprimir_spam" dos veces.
 
 \begin{verbatim}
-def print_spam():
+def imprimir_spam():
     print('spam')
 
-do_twice(print_spam)
+hacer_2veces(imprimir_spam)
 \end{verbatim}
 
 \begin{enumerate}
 
 \item Escribe este ejemplo en un script y pruébalo.
 
-\item Modifica \verb"do_twice" para que tome dos argumentos, un
+\item Modifica \verb"hacer_2veces" para que tome dos argumentos, un
 objeto de función y un valor, y llame a la función dos veces,
 pasando al valor como argumento.
 
 \item Copia la definición de
-\verb"print_twice", presentada previamente en este capítulo, a tu script.
+\verb"impr_2veces", presentada previamente en este capítulo, a tu script.
 
-\item Usa la versión modificada de \verb"do_twice" para llamar a
-\verb"print_twice" dos veces, pasando a \verb"'spam'" como argumento.
+\item Usa la versión modificada de \verb"hacer_2veces" para llamar a
+\verb"impr_2veces" dos veces, pasando a \verb"'spam'" como argumento.
 
 \item Define una nueva función llamada
-\verb"do_four" que tome un objeto de función y un valor
+\verb"hacer_4veces" que tome un objeto de función y un valor
 y llame a la función cuatro veces, pasando al valor
 como parámetro.  Debería haber sólo
 dos sentencias en el cuerpo de esta función, no cuatro.
@@ -2954,16 +2954,16 @@ Add this example to {\tt mypolygon.py} and run it again:
 
 \begin{verbatim}
 for i in range(4):
-    print('Hello!')
+    print('¡Hola!')
 \end{verbatim}
 %
 You should see something like this:
 
 \begin{verbatim}
-Hello!
-Hello!
-Hello!
-Hello!
+¡Hola!
+¡Hola!
+¡Hola!
+¡Hola!
 \end{verbatim}
 %
 This is the simplest use of the {\tt for} statement; we will see
